--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -9,7 +9,9 @@
     <h1>teste de iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur tenetur doloribus vel hic aliquid itaque quibusdam aperiam modi cupiditate veniam, id tempore? Eius blanditiis commodi architecto, iste delectus nemo necessitatibus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur autem minima, voluptates ad quas culpa! Pariatur vitae repellendus, quam earum culpa, similique sint exercitationem recusandae ipsum vel, obcaecati officia suscipit?</p>
 
-    <iframe src="pag001.html" frameborder="0"></iframe>
+    <iframe src="pag001.html" frameborder="0">
+        <p>infelismente o seu navegador nao e compativel</p>
+    </iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quia neque recusandae, eligendi est, magni minima odit, cum aperiam aut id dicta reprehenderit alias dolorem vitae delectus exercitationem nobis adipisci?Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores corrupti totam corporis doloribus quibusdam temporibus tempore doloremque accusamus qui libero ipsam pariatur cupiditate, eos accusantium maxime illo! Laboriosam, asperiores eveniet!</p>
 </body>
