--- a/exercicios/ex026/mq001/index.html
+++ b/exercicios/ex026/mq001/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Querry</title>
-    <link rel="stylesheet" href="estilos/tela.css" media="sreen">
-    <link rel="stylesheet" href="estilos/impressora.css" media="print">
+    <link rel="stylesheet" href="estilos/impressora.css" media="sreen">
+    <link rel="stylesheet" href="estilos/tela.css" media="print">
 </head>
 <body>
     <header>
