--- a/exercicios/ex027/flex02/index.html
+++ b/exercicios/ex027/flex02/index.html
@@ -9,12 +9,13 @@
             background-color: lightsalmon;
 
             display: flex;
+            flex-direction: column;
         }
         div.item {
             background-color: lightskyblue;
             border: 1px solid black;
             text-align: center;
-            flex: auto;
+            
         }
     </style>
 </head>
