--- a/exercicios/ex027/flex004/index.html
+++ b/exercicios/ex027/flex004/index.html
@@ -7,25 +7,27 @@
     <style>
         div.container {
             background-color: lightsalmon;
-
+            height: 300px;
             display: flex;
-            flex-flow: row wrap;
+            flex-flow: row nowrap;
+            justify-content: space-around;
+            align-items: center;
         }
         div.item {
             background-color: lightskyblue;
             border: 1px solid black;
             text-align: center;
-            flex: auto;
+            
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="item">Exemplo de bloco 1</div>
-        <div class="item">Exemplo de bloco 2</div>
-        <div class="item">Exemplo de bloco 3</div>
-        <div class="item">Exemplo de bloco 4</div>
-        <div class="item">Exemplo de bloco 5</div>
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
     </div>
 </body>
 </html>
