--- a/exercicios/ex027/flex014/index.html
+++ b/exercicios/ex027/flex014/index.html
@@ -19,7 +19,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio quas quisquam autem consequuntur esse, necessitatibus ducimus itaque in. Nulla id ipsa amet quibusdam a, consectetur numquam sapiente totam provident sunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni quis officia esse quod iste recusandae distinctio aut cupiditate, veritatis quae! Alias nostrum dignissimos optio quasi ab cupiditate consectetur rerum magnam!</p>
                 </div>
                 <div class="media">
-                    <img src="" alt="Criando um site flexbox">
+                    <img src="imagem.png" alt="Criando um site flexbox">
                 </div>
             </article>
             <article class="text-media">
